--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "i18next": "^21.6.16",
+    "i18next-browser-languagedetector": "^6.1.4",
     "next": "12.1.5",
     "react": "18.0.0",
-    "react-dom": "18.0.0"
+    "react-dom": "18.0.0",
+    "react-i18next": "^11.16.7"
   },
   "devDependencies": {
     "eslint": "8.13.0",
